# simple-market-maker-rust

./: .gitignore  Cargo.toml
src/: localorderbook.rs  main.rs  shared_state.rs
src/exchanges/binance/get/: client.rs
src/exchanges/binance/websockets/handlers/: orderbook.rs
src/exchanges/bybit/: mod.rs
src/exchanges/bybit/websockets/handlers/: orderbook.rs
